--- a/source/Makefile
+++ b/source/Makefile
@@ -1,13 +1,11 @@
 SRCS = real.cpp							\
 			 xthread.cpp          \
 perthreadsizeclass.cpp          \
-			mainheap.cpp					\
 			 libnumalloc.cpp			
 
 INCS = dlist.hh               \
 		numaheap.hh						\
 		pernodeheap.hh				\
-		pernodebigobjects.hh				\
 		pernodesizeclass.hh      \
 		perthreadheap.hh				\
 		perthreadsizeclass.hh				\
@@ -24,7 +22,8 @@ CXX = clang++
 
 
 #DNDEBUG
-CFLAGS = -g -std=c++14 -Wno-unused-result -O3  -DNUMA_NODES=2 -DSPEC_MAINTHREAD_SUPPORT
+CFLAGS = -g -std=c++14 -Wno-unused-result -O2  -DNUMA_NODES=2 -DSPEC_MAINTHREAD_SUPPORT -DUSE_HUGE_PAGE
+#CFLAGS = -g -std=c++14 -Wno-unused-result -O2 -DNUMA_NODES=2 -DUSE_HUGE_PAGE
 #CFLAGS = -g -std=c++14 -Wno-unused-result -DNDEBUG -O2 -DNUMA_NODES=2
 #CFLAGS = -g -Wno-unused-result -DNDEBUG -O2 -DNUMA_NODES=2
 #CFLAGS = -g -Wno-unused-result -DNDEBUG -O3 --std=c++11 -DNEW_BIG_HEAP -DNUMA_NODES=2
