--- a/source/Makefile
+++ b/source/Makefile
@@ -27,7 +27,7 @@ CXX = clang++
 #DNDEBUG
 #CFLAGS = -g -O2 -std=c++14 -Wno-unused-result -DNUMA_NODES=8 -DUSE_HUGE_PAGE
 CFLAGS = -g -O2 -std=c++14 -Wno-unused-result -DNUMA_NODES=8 -DINTERHEAP_SUPPORT -DUSE_HUGE_PAGE
--DMAX_USE_NODE=1
+#-DMAX_USE_NODE=1
 
 INCLUDE_DIRS = -I.
 LIBS     := dl pthread
